@@ -7,6 +7,8 @@ Changes in 3.3.3:
 - Fix broken FilterListModel::removeFilter fixes a crash (219760)
 - Revamp adding trackers to TrackerListModel, should fix a crash (218738)
 - Don't allow nested event loops when iterating over the incomplete url list in scanfolder plugin, fixes a crash (219885)
+- Fix crash due to uncaught exception in TorrentFileTreeModel::loadExpandedState 
+- Fix bug causing error message that the QM limits are reached to be shown instead of a torrent to be enqueued (220171)
 
 Changes in 3.3.2:
 - Fix crash when loading Feed in syndication plugin at startup (216207)
